start manager and delegate using regular starting methods for integration tests